# ManAc

./: .env.example  .gitignore  FIREBASE_DATA_MODEL.md  LICENSE  README.md  cookies.txt  pubspec.yaml
deploy/: .env.production.example  README.md  deploy_uwsgi.sh
django_backend/: cookies.txt  db.sqlite3  manage.py  pyproject.toml  requirements.txt  vercel.json
django_backend/accounts/: apps.py  auth_views.py  authentication.py  models.py  serializers.py  views.py
django_backend/accounts/management/commands/: seed_data.py
django_backend/accounts/migrations/: 0001_initial.py
django_backend/borrowings/: emails.py  models.py  serializers.py  views.py
django_backend/borrowings/management/commands/: check_overdue.py
django_backend/borrowings/migrations/: 0001_initial.py  0002_borrowing_checkout_email_sent_and_more.py
django_backend/core/: models.py  serializers.py  views.py
django_backend/core/migrations/: 0001_initial.py
django_backend/departments/: models.py  serializers.py  views.py
django_backend/departments/migrations/: 0001_initial.py
django_backend/equipment/: models.py  serializers.py  views.py
django_backend/equipment/migrations/: 0001_initial.py  0002_alter_equipment_category.py
django_backend/manac/: asgi.py  authentication.py  settings.py  urls.py  wsgi.py
fastAPI/: .env  .env.example  __init__.py  auth.py  database.py  email_service.py  main.py  models.py  requirements.txt  schemas.py  websocket_manager.py
lib/: callback_dispatcher.dart  firebase_options.dart  main.dart
manac/: .env.example  pubspec.yaml
test/: widget_test.dart
(+135 files in other folders)
